--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.c-button{
+    background-color: #e762d7ff;
+    width: 200px;
+    height: 25px;
+    border-radius: 5px;
+    border: 1px solid rgb(204, 204, 204);
+    font-size: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.f-button{
+    background-color: #b7e4f9ff;
+    width: 200px;
+    height: 25px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 20px;
 }
